--- a/package.json
+++ b/package.json
@@ -1,43 +1,51 @@
 {
   "name": "wetube",
   "version": "1.0.0",
-  "description": "Cloning Youtube with Vanila and NodeJS",
-  "main": "index.js",
+  "description": "Cloning Youtube with Vanilla and NodeJS",
   "author": "nayeon",
+  "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/node": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "autoprefixer": "^10.2.5",
+    "@babel/core": "^7.11.5",
+    "@babel/node": "^7.10.5",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.11.5",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
-    "css-loader": "^5.2.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "mini-css-extract-plugin": "^1.4.0",
-    "mongoose": "^5.12.2",
+    "express-session": "^1.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "helmet": "^4.1.0",
+    "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "postcss-loader": "^5.2.0",
-    "pug": "^3.0.2",
-    "sass-loader": "^11.0.1",
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0"
+    "node-sass": "^4.14.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "postcss-loader": "^4.0.2",
+    "pug": "^3.0.0",
+    "sass-loader": "^10.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "autoprefixer": "^10.0.0",
+    "css-loader": "^4.3.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "mini-css-extract-plugin": "^0.11.2",
+    "nodemon": "^2.0.4",
+    "postcss": "^8.2.9",
+    "prettier": "^2.1.2"
   }
 }
